# (c) Copyright 2019-2021 Hewlett Packard Enterprise Development LP
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = python-opsramp
author = HPE GreenLake SRE
author_email = eemz@hpe.com
description = Python language binding for the Opsramp API
keywords = opsramp
url = https://github.com/HewlettPackard/python-opsramp
license = Apache 2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Operating System :: OS Independent

[options]
packages = opsramp
python_requires = >=3.6
